--- a/styles.css
+++ b/styles.css
@@ -200,12 +200,17 @@ form {
   justify-content: center;
 }
 
-#footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  padding: 1rem 0;
-  background-color: #333;
-  color: #fff;
-  text-align: center;
+.footer {
+}
+
+@media screen and (max-width: 500px) {
+  nav ul li a {
+    font-size: 15px;
+  }
+  .service {
+    flex-basis: 75%;
+  }
+  .contact-container {
+    flex-direction: column;
+  }
 }
